# skills-manager

./: .env.example  .gitignore  AGENTS.md  API.md  README.md  ROADMAP.md  docker-compose-inline.yml  docker-compose.yml  justfile
apps/api/: Dockerfile  alembic.ini  pyproject.toml
apps/api/migrations/: env.py
apps/api/skillhub/: __init__.py
apps/api/skillhub_worker/: config.py  main.py  opencode_client.py  workspace.py
apps/api/tests/: __init__.py  api_command_test_case.py  conftest.py  postgres_test_case.py  repository_test_case.py  test_api_bundle_contract.py  test_api_commands.py  test_api_cors.py  test_api_eval_flow.py  test_api_persistence.py  test_api_skill_management.py  test_architecture_layers.py  test_domain_invariants.py  test_eval_assertion_templates.py  test_laminar_client.py  test_opencode_client.py  test_publish_gate_checks.py  test_publish_policy.py  test_review_policy.py  test_run_matrix.py  test_saved_views.py  test_schema_contract.py  test_sql_repository.py  test_sql_repository_bundle_audit.py  test_sql_repository_eval_runs.py  test_sql_repository_skill_versions.py  test_sql_store_bundle_audit.py  test_sql_store_eval_runs.py  test_sqlalchemy_metadata.py  test_worker_run_once.py  test_worker_workspace.py
apps/backend/: AGENTS.md  pyproject.toml
apps/backend/migrations/: env.py
apps/backend/skillhub_worker/: __init__.py  agent_workspace.py  builder_runner.py  config.py  eval_runner.py  eval_steps.py  heartbeat.py  laminar_client.py  main.py  opencode_client.py  opencode_trace.py  publish_runner.py  results.py  workspace.py  workspace_files.py
apps/backend/tests/: api_command_test_case.py  conftest.py  postgres_test_case.py  store_test_case.py  test_alembic_migrations.py  test_api_bundle_contract.py  test_api_cors.py  test_api_eval_flow.py  test_api_persistence.py  test_api_skill_management.py  test_architecture_layers.py  test_database_timeouts.py  (+34 more)
(+1082 files in other folders)
