[project]
name = "skillhub-api"
version = "0.1.0"
description = "SkillHub API"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.14",
  "fastapi>=0.115",
  "filelock>=3.16",
  "httpx>=0.28.1",
  "lmnr>=0.7.54",
  "psycopg[binary]>=3.2",
  "pydantic>=2.8",
  "pyyaml>=6.0",
  "python-multipart>=0.0.20",
  "sqlalchemy>=2.0",
  "uvicorn[standard]>=0.30",
]

[dependency-groups]
dev = [
  "httpx>=0.28.1",
  "mypy>=1.15",
  "pytest>=8.3",
  "ruff>=0.11",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28.1",
  "mypy>=1.15",
  "pytest>=8.3",
  "ruff>=0.11",
]

[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["skillhub*", "skillhub_worker*"]

[tool.pytest.ini_options]
markers = [
  "postgres: requires the PostgreSQL integration database",
]

[tool.ruff]
target-version = "py312"
line-length = 160

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]

[tool.mypy]
python_version = "3.12"
check_untyped_defs = true
ignore_missing_imports = true
no_implicit_optional = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = ["skillhub.models.schema.*"]
disallow_untyped_defs = true
